[gd_scene load_steps=4 format=2]

[ext_resource path="res://tiles/albert/albert.png" type="Texture" id=1]
[ext_resource path="res://Albatross.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Albatross" type="Node2D"]
script = ExtResource( 2 )

[node name="AlbatrossSprite" type="AnimatedSprite" parent="."]
position = Vector2( -36.8126, 141.706 )
scale = Vector2( 0.216729, 0.216729 )
z_index = 4
frames = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="AlbatrossSprite"]
position = Vector2( -21.7714, -3.86255 )
scale = Vector2( 19.6334, 28.179 )

[node name="FishTimer" type="Timer" parent="."]
wait_time = 0.125
autostart = true
[connection signal="screen_exited" from="AlbatrossSprite/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="FishTimer" to="." method="_on_FishTimer_timeout"]
